<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AACFC1"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/play_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        >
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/play_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singer"
            android:textSize="@dimen/text_size"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="．"
            />
        <TextView
            android:id="@+id/play_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song"
            android:textSize="35dp"

            android:layout_marginTop="5dp"
            />


    </LinearLayout>
    <com.huangyinghao.playermp3.ui.CircleImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:scaleType="center"
        android:src="@mipmap/ic_launcher"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:paddingRight="3dp"
        >



        <!--
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/play_continue"
                android:text="@string/play"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/play_pause"
                android:text="@string/pause"
                />
                -->

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_previous"
            android:text="@string/previous"
            android:src="@mipmap/icon_front_normal"
            android:background="@drawable/selector_music_btn"
            />

        <ImageButton
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/play_play_and_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:src="@mipmap/icon_pause_normal"
            android:background="@drawable/selector_music_btn"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_next"
            android:text="@string/next"
            android:src="@mipmap/icon_next_normal"
            android:background="@drawable/selector_music_btn"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/current_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"

                />
            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textSize="16sp"
                android:paddingTop="10dp"
                />
            <TextView
                android:id="@+id/total_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                />
        </LinearLayout>


    </LinearLayout>



</LinearLayout>