<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:cursorTab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@mipmap/bg_2"
    android:fitsSystemWindows="true">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:paddingTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        >
        <com.huangyinghao.playermp3.ui.cursorTab
            android:id="@+id/tab_song"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            cursorTab:ic_color="@color/changeColor"
            cursorTab:ic_icon="@mipmap/icon_items"
            cursorTab:text="@string/song"
            cursorTab:text_size="@dimen/text_size"
            android:layout_marginTop="2dp"
            />
        <com.huangyinghao.playermp3.ui.cursorTab
            android:id="@+id/tab_singer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            cursorTab:ic_color="@color/changeColor"
            cursorTab:ic_icon="@mipmap/ic_singer"
            cursorTab:text="@string/singer"
            cursorTab:text_size="@dimen/text_size"
            android:layout_marginTop="2dp"
            />
        <com.huangyinghao.playermp3.ui.cursorTab
            android:id="@+id/tab_album"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            cursorTab:ic_color="@color/changeColor"
            cursorTab:ic_icon="@mipmap/ic_album"
            cursorTab:text="@string/album"
            cursorTab:text_size="@dimen/text_size"
            android:layout_marginTop="2dp"
            />

    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />
    <RelativeLayout
        android:id="@+id/main_play_bar"
        android:layout_width="fill_parent"
        android:layout_height="64dip"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/main_icon"
            android:layout_width="64dip"
            android:layout_height="64dip"
            android:scaleType="centerCrop"
            android:background="@mipmap/img_album_background"
            android:src="@mipmap/img_album_background"
            android:layout_margin="2dp"
            />

        <ImageButton
            android:id="@+id/main_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_music_btn"
            android:padding="3.0dip"
            android:src="@mipmap/icon_next_normal" />

        <FrameLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="12.0dip"
            android:layout_toLeftOf="@id/main_next" >

            <ImageButton
                android:id="@+id/main_play_and_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_music_btn"
                android:padding="3.0dip"
                android:src="@mipmap/icon_pause_normal" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6.0dip"

            android:layout_toRightOf="@id/main_icon"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/main_singer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/main_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:singleLine="true"
                android:textColor="#ffffff" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
